testCountFreeCapacity